# lalr1

./: .gitignore  Cargo.toml  build-run.txt
labs/: Cargo.toml
labs/src/: mycalc.rs  mychy.rs
