[package]
name = "labs"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>", "Yu Chen <yuchen@tsinghua.edu.cn>"]
edition = "2018"

[dependencies]
parser-macros = { path = "../parser-macros" }
lazy_static = "1.3.0"
hashbrown = "0.5"

[[bin]]
name = "mymain"
path = "src/main.rs"

[[bin]]
name = "mychy"
path = "src/mychy.rs"


[[bin]]
name = "mycalc"
path = "src/mycalc.rs"

